@@ -1,3 +1,9 @@
+2003-02-18  Vince Darley <vincentdarley@users.sourceforge.net>
+
+	* macosx/tkMacOSXMenu.c: (SetMenuTitle) fix to utf encoding
+	problem when setting menu titles, and provisional support
+	for icons.
+
 2003-02-18  Donal K. Fellows  <fellowsd@cs.man.ac.uk>
 
 	* generic/tkImgGIF.c (FileReadGIF): Ensure that the trashBuffer is
